Updated Makefile to be Mac, Linux and Solaris specific

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+../rulesets/wille/regelsamling.ver8.opt
 lex/*/fast
-scrutinizer/test*.txt
+scrutinizer/*.txt
 scrutinizer/ut*
+scrutinizer/*csv*
+scrutinizer/*Csv*
 scrutinizer/skrutten*
 scrutinizer/demo*
 scrutinizer/Makefile.bak
