Big update. Some changes: should now be compliant with modern C/C++, the server mode can now accept custom rules in requests, some hardcoded references to default locations of lexicons etc. have been moved from individual files to the Makefile, problems with sentences sometimes being printed several times (or not at all) should be fixed, scrutinizing text from URLs now uses lynx to get the text and strip the HTML, some problems with newer versions of xerces are fixed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,28 @@
-../rulesets/wille/regelsamling.ver8.opt
 lex/*/fast
-scrutinizer/*.txt
+suc/*/fast
+scrutinizer/presentation.txt
 scrutinizer/ut*
 scrutinizer/*csv*
 scrutinizer/*Csv*
 scrutinizer/skrutten*
 scrutinizer/demo*
 scrutinizer/Makefile.bak
+rulesets/*/*.opt
+scrutinizer/Makefile.normal
+scrutinizer/Makefile.parse
+scrutinizer/Makefile.www
+scrutinizer/x1.xml
+*~
+scrutinizer/scrutinizer
+scrutinizer/scrutinizer.normal
+scrutinizer/scrutinizer.parse
+scrutinizer/wwwscrutinizer
+scrutinizer/tagg
+scrutinizer/testlibrary
+*.o
+scrutinizer/libgranska.so
+scrutinizer/messages
+scrutinizer/scrut/lex.yy.c
+scrutinizer/scrut/rules.output
+scrutinizer/scrut/rules.tab.cpp
+scrutinizer/scrut/rules.tab.h
